--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.3.*",
-        "yajra/laravel-datatables-oracle": "~6.0"
+        "symfony/psr-http-message-bridge": "^1.0",
+        "yajra/laravel-datatables-oracle": "~6.0",
+        "zendframework/zend-diactoros": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
